SERVER-40820 Index builders to support write conflicts