src/mongo/db/catalog/list_indexes.cpp
@@ -74,39 +74,37 @@ std::list<BSONObj> listIndexesInLock(OperationContext* opCtx,
     CurOpFailpointHelpers::waitWhileFailPointEnabled(
         &hangBeforeListIndexes, opCtx, "hangBeforeListIndexes", []() {}, nss);
 
-    std::vector<std::string> indexNames;
-    writeConflictRetry(opCtx, "listIndexes", nss.ns(), [&] {
-        indexNames.clear();
+    return writeConflictRetry(opCtx, "listIndexes", nss.ns(), [&] {
+        std::vector<std::string> indexNames;
+        std::list<BSONObj> indexSpecs;
         durableCatalog->getAllIndexes(opCtx, collection->getCatalogId(), &indexNames);
-    });
 
-    std::list<BSONObj> indexSpecs;
-
-    for (size_t i = 0; i < indexNames.size(); i++) {
-        auto indexSpec = writeConflictRetry(opCtx, "listIndexes", nss.ns(), [&] {
-            if (includeBuildUUIDs.value_or(false) &&
-                !durableCatalog->isIndexReady(opCtx, collection->getCatalogId(), indexNames[i])) {
-                // The durable catalog will not have a build UUID for the given index name if it was
-                // not being built with two-phase.
-                const auto durableBuildUUID = DurableCatalog::get(opCtx)->getIndexBuildUUID(
-                    opCtx, collection->getCatalogId(), indexNames[i]);
-                if (!durableBuildUUID) {
-                    return durableCatalog->getIndexSpec(
-                        opCtx, collection->getCatalogId(), indexNames[i]);
-                }
-
-                BSONObjBuilder builder;
-                builder.append(
-                    "spec"_sd,
+        for (size_t i = 0; i < indexNames.size(); i++) {
+            if (!includeBuildUUIDs.value_or(false) ||
+                durableCatalog->isIndexReady(opCtx, collection->getCatalogId(), indexNames[i])) {
+                indexSpecs.push_back(
                     durableCatalog->getIndexSpec(opCtx, collection->getCatalogId(), indexNames[i]));
-                durableBuildUUID->appendToBuilder(&builder, "buildUUID"_sd);
-                return builder.obj();
+                continue;
             }
-            return durableCatalog->getIndexSpec(opCtx, collection->getCatalogId(), indexNames[i]);
-        });
-        indexSpecs.push_back(indexSpec);
-    }
-    return indexSpecs;
+            // The durable catalog will not have a build UUID for the given index name if it was
+            // not being built with two-phase.
+            const auto durableBuildUUID = DurableCatalog::get(opCtx)->getIndexBuildUUID(
+                opCtx, collection->getCatalogId(), indexNames[i]);
+            if (!durableBuildUUID) {
+                indexSpecs.push_back(
+                    durableCatalog->getIndexSpec(opCtx, collection->getCatalogId(), indexNames[i]));
+                continue;
+            }
+
+            BSONObjBuilder builder;
+            builder.append(
+                "spec"_sd,
+                durableCatalog->getIndexSpec(opCtx, collection->getCatalogId(), indexNames[i]));
+            durableBuildUUID->appendToBuilder(&builder, "buildUUID"_sd);
+            indexSpecs.push_back(builder.obj());
+        }
+        return indexSpecs;
+    });
 }
 std::list<BSONObj> listIndexesEmptyListIfMissing(OperationContext* opCtx,
                                                  const NamespaceStringOrUUID& nss,
